created custom format method in describer